syntax = "proto3";

package go.micro.service.signin;

option go_package = "github.com/reversTeam/go-ms-tools/services/signin/protobuf";

import "google/api/annotations.proto";
import "github.com/reversTeam/go-ms-tools/services/abs/protobuf/abs.proto";

message RegisterRequest {
  string email = 1;
  string firstname = 2;
  string lastname = 3;
  string birthday = 4;
  string password = 5;
}

message ValidateSigninRequest {
  string id = 1;
  string validation_token = 2;
}


service Signin {
  rpc Register(RegisterRequest) returns (abs.Response) {
    option (google.api.http) = {
      post: "/signin"
      body: "*"
    };
  }

  rpc Validate(ValidateSigninRequest) returns (abs.Response) {
    option (google.api.http) = {
      get: "/signin/{id}/{validation_token}"
    };
  }
}